--- a/desenvol.html
+++ b/desenvol.html
@@ -75,7 +75,7 @@
       </p>
     </div>
     <footer>
-      <p>&copy; 2023 Marco Zero Recife. Todos os direitos reservados.</p>
+      <p>&copy; 2023 Marco Zero Recife. Todos os direitos reservados Jaque.</p>
     </footer>
   </body>
 </html>
